создан блок интро

--- a/index.html
+++ b/index.html
@@ -7,9 +7,35 @@
 
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Точка кипения</title>
+    <title>Центр компетенций</title>
 </head>
 <body>
+
+<header class="header" id="header">
+    <div class="container">
+        <div class="header__inner">
+            <img src="images/logo.png" alt="Лого" class="header__logo">
+
+            <nav class="nav">
+                <a href="" class="nav__link">О центре</a>
+                <a href="" class="nav__link">Мероприятия</a>
+                <a href="" class="nav__link">Партнёры</a>
+            </nav>
+        </div>
+    </div>
+</header>
+
+<div class="intro" id="intro">
+    <div class="container">
+        <div class="intro__inner">
+            <div class="intro__text">
+                Центр компетенций
+            </div>
+
+            <button class="intro__btn btn btn--intro">Видео про нас</button>
+        </div>
+    </div>
+</div>
     
 <script src="js/app.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" type="text/javascript"></script>
