--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&family=Montserrat:ital,wght@0,400;0,700;1,300&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/style.css">
 
@@ -17,7 +20,8 @@
             <img src="images/logo.png" alt="Лого" class="header__logo">
 
             <nav class="nav">
-                <a href="" class="nav__link">О центре</a>
+                <a href="#about" class="nav__link">О центре</a>
+                <a href="#slider" class="nav__link">Мы предоставляем</a>
                 <a href="" class="nav__link">Мероприятия</a>
                 <a href="" class="nav__link">Партнёры</a>
             </nav>
@@ -25,7 +29,7 @@
     </div>
 </header>
 
-<div class="intro" id="intro">
+<section class="intro" id="intro">
     <div class="container">
         <div class="intro__inner">
             <div class="intro__text">
@@ -35,10 +39,50 @@
             <button class="intro__btn btn btn--intro">Видео про нас</button>
         </div>
     </div>
-</div>
+</section>
+
+<section class="about" id="about">
+    <div class="container">
+        <div class="about__inner">
+            <h1 class="about__title title">
+                Что такое Центр компетенций
+            </h1>
+
+            <div class="about__row">
+                <img src="images/about/1.jpg" alt="" class="about__img">
+                <p class="about__text">Это место, где студенты смогут оценить и развить свои надпрофессиональные компетенции. Для чего? Чтобы найти работу мечты. А в процессе поиска – стать лучшей версией себя.</p>
+            </div>
+            <div class="about__row">
+                <p class="about__text">В Центре компетенций у обучающихся оценят надпрофессиональные навыки, помогут их развить на основе индивидуальной траектории, сформируют цифровой профиль и откроют к нему доступ для работодателей.</p>
+                <img src="images/about/2.jpg" alt="" class="about__img">
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="slider__block" id="slider">
+    <div class="container">
+        <h1 class="slider__title title">Что мы предоставляем</h1>
+        <div class="slider">
+            <div class="slider__item">
+                Валидные инструменты оценки 
+                и развития студентов</div>
+            <div class="slider__item">Точка осознанной коммуникации
+                студента с работодателем при поддержке 
+                университета и АНО «Россия – страна 
+                возможностей»</div>
+            <div class="slider__item">Удобная среда подбора кадров для 
+                работодателей</div>
+            <div class="slider__item">Точка развития кадрового потенциала 
+                университета (программ, 
+                преподавателей, административного 
+                персонала)</div>
+        </div>
+    </div>
+</section>
     
-<script src="js/app.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" type="text/javascript"></script>
 <script src="js/slick.min.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
