--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <nav class="nav">
                 <a href="#about" class="nav__link">О центре</a>
                 <a href="#slider" class="nav__link">Мы предоставляем</a>
-                <a href="" class="nav__link">Мероприятия</a>
-                <a href="" class="nav__link">Партнёры</a>
+                <a href="#news" class="nav__link">Мероприятия</a>
+                <a href="#partners" class="nav__link">Партнёры</a>
             </nav>
         </div>
     </div>
@@ -44,7 +44,7 @@
 <section class="about" id="about">
     <div class="container">
         <div class="about__inner">
-            <h1 class="about__title title">
+            <h1 class="title">
                 Что такое Центр компетенций
             </h1>
 
@@ -62,7 +62,7 @@
 
 <section class="slider__block" id="slider">
     <div class="container">
-        <h1 class="slider__title title">Что мы предоставляем</h1>
+        <h1 class="title">Что мы предоставляем</h1>
         <div class="slider">
             <div class="slider__item">
                 Валидные инструменты оценки 
@@ -77,6 +77,94 @@
                 университета (программ, 
                 преподавателей, административного 
                 персонала)</div>
+        </div>
+    </div>
+</section>
+
+<section class="news" id="news">
+    <div class="container">
+        <div class="news__inner">
+            <h1 class="title">Наши мероприятия</h1>
+            <div class="news__content">
+                <div class="news__item">
+                    <img src="images/news/студвесна.png" alt="" class="news__photo">
+                    <h5 class="news__subtitle">Студенческая весна</h5>
+                    <p class="news__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    <time class="news__data">12 декабря 2021</time>
+                </div>
+                <div class="news__item">
+                    <img src="images/news/управляй.png" alt="" class="news__photo">
+                    <h5 class="news__subtitle">Управляй</h5>
+                    <p class="news__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    <time class="news__data">12 декабря 2021</time>
+                </div>
+                <div class="news__item">
+                    <img src="images/news/casein.png" alt="" class="news__photo">
+                    <h5 class="news__subtitle">Case-IN</h5>
+                    <p class="news__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    <time class="news__data">12 декабря 2021</time>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="partners" id="partners">
+    <div class="container">
+        <div class="partners__inner">
+            <div class="title">Наши партнёры</div>
+            <button class="btn btn--partn" id="btnPartn">Показать всё</button>
+            <div class="partners__table">
+                <div class="partners__row">
+                    <img src="https://place-hold.it/200" alt="" class="partners__img">
+                    <img src="https://place-hold.it/200" alt="" class="partners__img">
+                    <img src="https://place-hold.it/200" alt="" class="partners__img">
+                    <img src="https://place-hold.it/200" alt="" class="partners__img">
+                    <img src="https://place-hold.it/200" alt="" class="partners__img">
+                    <img src="https://place-hold.it/200" alt="" class="partners__img">
+                </div>
+                <div class="partners__hidden" id="hiddenTable">
+                    <div class="partners__row">
+                        <img src="https://place-hold.it/200" alt="" class="partners__img">
+                        <img src="https://place-hold.it/200" alt="" class="partners__img">
+                        <img src="https://place-hold.it/200" alt="" class="partners__img">
+                        <img src="https://place-hold.it/200" alt="" class="partners__img">
+                        <img src="https://place-hold.it/200" alt="" class="partners__img">
+                        <img src="https://place-hold.it/200" alt="" class="partners__img">
+                    </div>
+                    <div class="partners__row">
+                        <img src="https://place-hold.it/200" alt="" class="partners__img">
+                        <img src="https://place-hold.it/200" alt="" class="partners__img">
+                        <img src="https://place-hold.it/200" alt="" class="partners__img">
+                        <img src="https://place-hold.it/200" alt="" class="partners__img">
+                        <img src="https://place-hold.it/200" alt="" class="partners__img">
+                        <img src="https://place-hold.it/200" alt="" class="partners__img">
+                    </div>
+                    <div class="partners__row">
+                        <img src="https://place-hold.it/200" alt="" class="partners__img">
+                        <img src="https://place-hold.it/200" alt="" class="partners__img">
+                        <img src="https://place-hold.it/200" alt="" class="partners__img">
+                        <img src="https://place-hold.it/200" alt="" class="partners__img">
+                        <img src="https://place-hold.it/200" alt="" class="partners__img">
+                        <img src="https://place-hold.it/200" alt="" class="partners__img">
+                    </div>
+                    <div class="partners__row">
+                        <img src="https://place-hold.it/200" alt="" class="partners__img">
+                        <img src="https://place-hold.it/200" alt="" class="partners__img">
+                        <img src="https://place-hold.it/200" alt="" class="partners__img">
+                        <img src="https://place-hold.it/200" alt="" class="partners__img">
+                        <img src="https://place-hold.it/200" alt="" class="partners__img">
+                        <img src="https://place-hold.it/200" alt="" class="partners__img">
+                    </div>
+                    <div class="partners__row">
+                        <img src="https://place-hold.it/200" alt="" class="partners__img">
+                        <img src="https://place-hold.it/200" alt="" class="partners__img">
+                        <img src="https://place-hold.it/200" alt="" class="partners__img">
+                        <img src="https://place-hold.it/200" alt="" class="partners__img">
+
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </section>
