добавлена фавиконка и анимации

--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&family=Montserrat:ital,wght@0,400;0,700;1,300&display=swap" rel="stylesheet">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+    <link rel="manifest" href="favicons/site.webmanifest">
+    <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#413b7e">
+    <meta name="msapplication-TileColor" content="#2b5797">
+    <meta name="theme-color" content="#413b7e">
 
     <link rel="stylesheet" href="css/style.css">
 
@@ -14,10 +23,10 @@
 </head>
 <body>
 
-<header class="header" id="header">
+<header class="header anim-items" id="header">
     <div class="container">
         <div class="header__inner">
-            <img src="images/logo.png" alt="Лого" class="header__logo">
+            <a href="" class="header__logo"></a>
 
             <nav class="nav">
                 <a href="#about" class="nav__link">О центре</a>
@@ -31,7 +40,7 @@
 
 <section class="intro" id="intro">
     <div class="container">
-        <div class="intro__inner">
+        <div class="intro__inner anim-items">
             <div class="intro__text">
                 Центр компетенций
             </div>
@@ -50,7 +59,7 @@
     </div>
 </div>
 
-<section class="about" id="about">
+<section class="about anim-items" id="about">
     <div class="container">
         <div class="about__inner">
             <h1 class="title">
@@ -69,7 +78,7 @@
     </div>
 </section>
 
-<section class="slider__block" id="slider">
+<section class="slider__block anim-items" id="slider">
     <div class="container">
         <h1 class="title">Что мы предоставляем</h1>
         <div class="slider">
@@ -90,7 +99,7 @@
     </div>
 </section>
 
-<section class="news" id="news">
+<section class="news anim-items" id="news">
     <div class="container">
         <div class="news__inner">
             <h1 class="title">Наши мероприятия</h1>
@@ -118,7 +127,7 @@
     </div>
 </section>
 
-<section class="partners" id="partners">
+<section class="partners anim-items" id="partners">
     <div class="container">
         <div class="partners__inner">
             <div class="title">Наши партнёры</div>
