изменена анимация шапки добавлен фоновый блок значения margin и padding изменены с px на rem явно добавлен цвет текста кнопки

--- a/index.html
+++ b/index.html
@@ -67,12 +67,24 @@
             </h1>
 
             <div class="about__row">
-                <img src="images/about/1.jpg" alt="" class="about__img">
+                <div class="about__item">
+                    <img src="images/about/1.jpg" alt="" class="about__img">
+                    <div class="about__content">
+                        <p class="about__title">Открытие</p>
+                        <p class="about__subtitle">Это фотография сделана на мероприятии, посвящённом открытию Центра компетенций в ТГТУ.</p>
+                    </div>
+                </div>
                 <p class="about__text">Это место, где студенты смогут оценить и развить свои надпрофессиональные компетенции. Для чего? Чтобы найти работу мечты. А в процессе поиска – стать лучшей версией себя.</p>
             </div>
             <div class="about__row">
                 <p class="about__text">В Центре компетенций у обучающихся оценят надпрофессиональные навыки, помогут их развить на основе индивидуальной траектории, сформируют цифровой профиль и откроют к нему доступ для работодателей.</p>
-                <img src="images/about/2.jpg" alt="" class="about__img">
+                <div class="about__item">
+                    <img src="images/about/2.jpg" alt="" class="about__img">
+                    <div class="about__content">
+                        <p class="about__title">Наша команда</p>
+                        <p class="about__subtitle">Фотография нашего коллектива, сделанная всё на том же мероприятии.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
