переделан блок партнёров

--- a/index.html
+++ b/index.html
@@ -145,28 +145,39 @@
             <div class="title">Наши партнёры</div>
             <button class="btn btn--partn" id="btnPartn">Показать всё</button>
             <div class="partners__table">
-                <div class="partners__row">
-                    <img src="images/partn/россия страна возможностей.png" alt="" class="partners__img">
-                    <img src="images/partn/тгту.png" alt="" class="partners__img">
-                    <img src="images/partn/сбер.png" alt="" class="partners__img">
-                    <img src="images/partn/ростелеком.png" alt="" class="partners__img">
-                    <img src="images/partn/кванториум.png" alt="" class="partners__img">
-                    <img src="images/partn/яндекс лицей.png" alt="" class="partners__img">
-                </div>
-                <div class="partners__hidden" id="hiddenTable">
-                    <div class="partners__row">
-                        <img src="images/partn/isoroc.png" alt="" class="partners__img">
-                        <img src="images/partn/worldSkills.png" alt="" class="partners__img">
-                        <img src="images/partn/звезда.png" alt="" class="partners__img">
-                        <img src="images/partn/крата.png" alt="" class="partners__img">
-                        <img src="images/partn/сколково.png" alt="" class="partners__img">
-                        <img src="images/partn/тамак.png" alt="" class="partners__img">
-                    </div>
-                    <div class="partners__row">
-                        <img src="images/partn/центр технологического образования.png" alt="" class="partners__img">
-                        <img src="images/partn/я профи.png" alt="" class="partners__img">
-                    </div>
-                </div>
+                <img src="images/partn/россия страна возможностей.png" alt="" class="partners__img">
+                <img src="images/partn/тгту.png" alt="" class="partners__img">
+                <img src="images/partn/сбер.png" alt="" class="partners__img">
+                <img src="images/partn/ростелеком.png" alt="" class="partners__img">
+                <img src="images/partn/кванториум.png" alt="" class="partners__img">
+                <img src="images/partn/яндекс лицей.png" alt="" class="partners__img">
+                <img src="images/partn/isoroc.png" alt="" class="partners__img">
+                <!-- <div class="partners__hidden" id="hiddenTable"> -->
+                    <img src="images/partn/worldSkills.png" alt="" class="partners__img">
+                    <img src="images/partn/звезда.png" alt="" class="partners__img">
+                    <img src="images/partn/крата.png" alt="" class="partners__img">
+                    <img src="images/partn/сколково.png" alt="" class="partners__img">
+                    <img src="images/partn/тамак.png" alt="" class="partners__img">
+                    <img src="images/partn/центр технологического образования.png" alt="" class="partners__img">
+                    <img src="images/partn/я профи.png" alt="" class="partners__img">
+                    <img src="images/partn/техносфера.png" alt="" class="partners__img">
+                    <img src="images/partn/сгму.jpg" alt="" class="partners__img">
+                    <img src="images/partn/липецкий.png" alt="" class="partners__img">
+                    <img src="images/partn/ИиУ.jpeg" alt="" class="partners__img">
+                    <img src="images/partn/воу.jpg" alt="" class="partners__img">
+                    <img src="images/partn/бзск.jpg" alt="" class="partners__img">
+                    <img src="images/partn/всерос.png" alt="" class="partners__img">
+                    <img src="images/partn/курчатов.jpg" alt="" class="partners__img">
+                    <img src="images/partn/дубка.jpg" alt="" class="partners__img">
+                    <img src="images/partn/ноиб.jpg" alt="" class="partners__img">
+                    <img src="images/partn/ргазу.png" alt="" class="partners__img">
+                    <img src="images/partn/чгпу.jpg" alt="" class="partners__img">
+                    <img src="images/partn/гау.jpg" alt="" class="partners__img">
+                    <img src="images/partn/кфу.jpg" alt="" class="partners__img">
+                    <img src="images/partn/мгу.png" alt="" class="partners__img">
+                    <img src="images/partn/завком.jpg" alt="" class="partners__img">
+                    <img src="images/partn/росхимзащита.png" alt="" class="partners__img">
+                <!-- </div> -->
             </div>
         </div>
     </div>
