полная адаптация под мелкие планшеты

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="header__inner">
             <a href="" class="header__logo"></a>
 
-            <nav class="nav" id="nav">
+            <nav class="nav hide" id="nav">
                 <a href="#about" class="nav__link">О центре</a>
                 <a href="#slider" class="nav__link">Мы предоставляем</a>
                 <a href="#news" class="nav__link">Мероприятия</a>
