предварительная полная адаптация

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Центр компетенций</title>
+    <title>Центр компетенций ТГТУ</title>
 </head>
 <body>
 
@@ -55,12 +55,12 @@
 </section>
 
 <div class="overflow hidden transparent" id="overflow">
-    <div class="container">
+    <!-- <div class="container"> -->
         <iframe class="overflow__frame" allowfullscreen data-src="https://www.youtube.com/embed/UOUR_uepMzw" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <div class="overflow__close" onclick="hideOverflow()">
             <img src="images/svg/close.svg" alt="">
         </div>
-    </div>
+    <!-- </div> -->
 </div>
 
 <section class="about anim-items" id="about">
@@ -197,10 +197,10 @@
                     Д. 1</a>
             </div>
             <div class="footer__col">
-                <h3 class="footer__director">Руководитель</h3>
+                <h3 class="footer__post">Руководитель</h3>
                 <p class="footer__name">Эдуард Злобин</p>
                 <a href="mailto:ehduardzlobin@yandex.ru">ehduardzlobin@yandex.ru</a>
-                <h3 class="footer__specialists">Специалисты</h3>
+                <h3 class="footer__post">Специалисты</h3>
                 <p class="footer__name">Наталия Дёмина<br>Татьяна Чупахина</p>
             </div>
         </div>
