--- a/index.html
+++ b/index.html
@@ -123,25 +123,7 @@
     <div class="container">
         <div class="news__inner">
             <h1 class="title">Наши мероприятия</h1>
-            <div class="news__content">
-                <div class="news__item">
-                    <img src="images/news/студвесна.png" alt="" class="news__photo">
-                    <h5 class="news__subtitle">Студенческая весна</h5>
-                    <p class="news__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                    <time class="news__data">12 декабря 2021</time>
-                </div>
-                <div class="news__item">
-                    <img src="images/news/управляй.png" alt="" class="news__photo">
-                    <h5 class="news__subtitle">Управляй</h5>
-                    <p class="news__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                    <time class="news__data">12 декабря 2021</time>
-                </div>
-                <div class="news__item">
-                    <img src="images/news/casein.png" alt="" class="news__photo">
-                    <h5 class="news__subtitle">Case-IN</h5>
-                    <p class="news__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                    <time class="news__data">12 декабря 2021</time>
-                </div>
+            <div class="news__content" id="news__content">
             </div>
         </div>
     </div>
