--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" prefix="og: http://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,6 +16,25 @@
     <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#707070">
     <meta name="msapplication-TileColor" content="#2b5797">
     <meta name="theme-color" content="#ffffff">
+
+    <meta name="description" content="Добро пожаловать в Центр компетенций Тамбовского Государственного Технического Университета. Мы помогаем оценить развить ваши надпрофессиональные навыки, чтобы в будущем вы могли найти работу вашей мечты."/>
+    <meta name="keywords" content="ТГТУ, Центр, навыки, кадры, студенты, Мероприятия"/>
+
+    <meta name="robots" content="none"/>
+
+    <meta name="Author" content="Ярослав Аверин">
+    <meta name="Copyright" content="Эдуард Злобин">
+    <meta name="Address" content="Россия, Тамбоская область, Тамбов, Ленинградская улица, дом 1">
+
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Центр компетенций ТГТУ">
+    <meta property="og:description" content="Добро пожаловать в Центр компетенций Тамбовского Государственного Технического Университета. Мы помогаем оценить развить ваши надпрофессиональные навыки, чтобы в будущем вы могли найти работу вашей мечты.">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="/images/bg.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:site_name" content="ТГТУ Центр компетенций">
+    <meta property="og:locale" content="ru_RU">
 
     <link rel="stylesheet" href="css/style.css">
 
@@ -49,9 +68,9 @@
     <div class="container container--intro">
         <div class="intro__inner anim-items">
             <div class="intro__text">
-                <h1 class="intro__title">
+                <h2 class="intro__title">
                     Центр<br>компетенций
-                </h1>
+                </h2>
                 <h3 class="intro__subtitle">Тамбовский Государственный технический университет</h3>
             </div>
 
@@ -63,20 +82,20 @@
 <div class="overflow hidden transparent" id="overflow">
     <iframe class="overflow__frame" allowfullscreen data-src="https://www.youtube.com/embed/UOUR_uepMzw" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <div class="overflow__close" onclick="hideOverflow()">
-        <img src="images/svg/close.svg" alt="">
+        <img src="images/svg/close.svg" alt="Закрыть">
     </div>
 </div>
 
 <section class="about anim-items" id="about">
     <div class="container">
         <div class="about__inner">
-            <h1 class="title">
+            <h2 class="title">
                 Что такое Центр компетенций
-            </h1>
+            </h2>
 
             <div class="about__row">
                 <div class="about__item">
-                    <img src="images/about/1.jpg" alt="" class="about__img">
+                    <img src="images/about/1.jpg" alt="Открытие" class="about__img">
                     <div class="about__content">
                         <p class="about__title">Открытие</p>
                         <p class="about__subtitle">Это фотография сделана на мероприятии, посвящённом открытию Центра компетенций в ТГТУ.</p>
@@ -87,7 +106,7 @@
             <div class="about__row">
                 <p class="about__text">В Центре компетенций у обучающихся оценят надпрофессиональные навыки, помогут их развить на основе индивидуальной траектории, сформируют цифровой профиль и откроют к нему доступ для работодателей.</p>
                 <div class="about__item">
-                    <img src="images/about/2.jpg" alt="" class="about__img">
+                    <img src="images/about/2.jpg" alt="Наша команда" class="about__img">
                     <div class="about__content">
                         <p class="about__title">Наша команда</p>
                         <p class="about__subtitle">Фотография нашего коллектива, сделанная всё на том же мероприятии.</p>
@@ -100,7 +119,7 @@
 
 <section class="slider__block anim-items" id="slider">
     <div class="container">
-        <h1 class="title">Что мы предоставляем</h1>
+        <h2 class="title">Что мы предоставляем</h2>
         <div class="slider">
             <div class="slider__item">
                 Валидные инструменты оценки 
@@ -122,7 +141,7 @@
 <section class="news anim-items" id="news">
     <div class="container">
         <div class="news__inner">
-            <h1 class="title">Наши мероприятия</h1>
+            <h2 class="title">Наши мероприятия</h2>
             <div class="news__content" id="news__content">
             </div>
         </div>
@@ -135,37 +154,37 @@
             <div class="title">Наши партнёры</div>
             <button class="btn btn--partn" id="btnPartn">Показать всё</button>
             <div class="partners__table">
-                <img src="images/partn/россия страна возможностей.png" alt="" class="partners__img">
-                <img src="images/partn/тгту.png" alt="" class="partners__img">
-                <img src="images/partn/сбер.png" alt="" class="partners__img">
-                <img src="images/partn/ростелеком.png" alt="" class="partners__img">
-                <img src="images/partn/кванториум.png" alt="" class="partners__img">
-                <img src="images/partn/яндекс лицей.png" alt="" class="partners__img">
-                <img src="images/partn/isoroc.png" alt="" class="partners__img">
-                <img src="images/partn/worldSkills.png" alt="" class="partners__img">
-                <img src="images/partn/звезда.png" alt="" class="partners__img">
-                <img src="images/partn/крата.png" alt="" class="partners__img">
-                <img src="images/partn/сколково.png" alt="" class="partners__img">
-                <img src="images/partn/тамак.png" alt="" class="partners__img">
-                <img src="images/partn/центр технологического образования.png" alt="" class="partners__img">
-                <img src="images/partn/я профи.png" alt="" class="partners__img">
-                <img src="images/partn/техносфера.png" alt="" class="partners__img">
-                <img src="images/partn/сгму.jpg" alt="" class="partners__img">
-                <img src="images/partn/липецкий.png" alt="" class="partners__img">
-                <img src="images/partn/ИиУ.jpeg" alt="" class="partners__img">
-                <img src="images/partn/воу.jpg" alt="" class="partners__img">
-                <img src="images/partn/бзск.jpg" alt="" class="partners__img">
-                <img src="images/partn/всерос.png" alt="" class="partners__img">
-                <img src="images/partn/курчатов.jpg" alt="" class="partners__img">
-                <img src="images/partn/дубка.jpg" alt="" class="partners__img">
-                <img src="images/partn/ноиб.jpg" alt="" class="partners__img">
-                <img src="images/partn/ргазу.png" alt="" class="partners__img">
-                <img src="images/partn/чгпу.jpg" alt="" class="partners__img">
-                <img src="images/partn/гау.jpg" alt="" class="partners__img">
-                <img src="images/partn/кфу.jpg" alt="" class="partners__img">
-                <img src="images/partn/мгу.png" alt="" class="partners__img">
-                <img src="images/partn/завком.jpg" alt="" class="partners__img">
-                <img src="images/partn/росхимзащита.png" alt="" class="partners__img">
+                <img src="images/partn/россия страна возможностей.png" alt="Россия - страна возможностей" class="partners__img">
+                <img src="images/partn/тгту.png" alt="ТГТУ" class="partners__img">
+                <img src="images/partn/сбер.png" alt="Сюер" class="partners__img">
+                <img src="images/partn/ростелеком.png" alt="Ростелеком" class="partners__img">
+                <img src="images/partn/кванториум.png" alt="Кванториум" class="partners__img">
+                <img src="images/partn/яндекс лицей.png" alt="Яндекс.Лицей" class="partners__img">
+                <img src="images/partn/isoroc.png" alt="isoroc" class="partners__img">
+                <img src="images/partn/worldSkills.png" alt="WorldSkillds" class="partners__img">
+                <img src="images/partn/звезда.png" alt="Звезда" class="partners__img">
+                <img src="images/partn/крата.png" alt="Крата" class="partners__img">
+                <img src="images/partn/сколково.png" alt="Сколково" class="partners__img">
+                <img src="images/partn/тамак.png" alt="Тамак" class="partners__img">
+                <img src="images/partn/центр технологического образования.png" alt="центр технологического образования" class="partners__img">
+                <img src="images/partn/я профи.png" alt="Я - Профи" class="partners__img">
+                <img src="images/partn/техносфера.png" alt="Техносфера" class="partners__img">
+                <img src="images/partn/сгму.jpg" alt="СГМУ" class="partners__img">
+                <img src="images/partn/липецкий.png" alt="Липецкий университет" class="partners__img">
+                <img src="images/partn/ИиУ.jpeg" alt="Информатика и Управление" class="partners__img">
+                <img src="images/partn/воу.jpg" alt="Воронежский опорный университет" class="partners__img">
+                <img src="images/partn/бзск.jpg" alt="Бокинский завод строительных конструкций" class="partners__img">
+                <img src="images/partn/всерос.png" alt="Всероссийская олимпиада школьников" class="partners__img">
+                <img src="images/partn/курчатов.jpg" alt="Курчатов" class="partners__img">
+                <img src="images/partn/дубка.jpg" alt="Государственный университет 'Дубна'" class="partners__img">
+                <img src="images/partn/ноиб.jpg" alt="Инженерия будущего" class="partners__img">
+                <img src="images/partn/ргазу.png" alt="РГАЗУ" class="partners__img">
+                <img src="images/partn/чгпу.jpg" alt="ЧГПУ" class="partners__img">
+                <img src="images/partn/гау.jpg" alt="МичГАУ" class="partners__img">
+                <img src="images/partn/кфу.jpg" alt="КФУ" class="partners__img">
+                <img src="images/partn/мгу.png" alt="МГУ" class="partners__img">
+                <img src="images/partn/завком.jpg" alt="Завком" class="partners__img">
+                <img src="images/partn/росхимзащита.png" alt="Росхимзащита" class="partners__img">
             </div>
         </div>
     </div>
