Config для хостинга, шаблон для нового блока

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="msapplication-TileColor" content="#2b5797">
     <meta name="theme-color" content="#ffffff">
 
-    <meta name="description" content="Добро пожаловать в Центр компетенций Тамбовского Государственного Технического Университета. Мы помогаем оценить развить ваши надпрофессиональные навыки, чтобы в будущем вы могли найти работу вашей мечты."/>
+    <meta name="description" content="Добро пожаловать в Центр компетенций Тамбовского Государственного Технического Университета. Мы помогаем оценить и развить ваши надпрофессиональные навыки, чтобы в будущем вы могли найти работу вашей мечты."/>
     <meta name="keywords" content="ТГТУ, Центр, навыки, кадры, студенты, Мероприятия"/>
 
     <meta name="robots" content="none"/>
@@ -27,14 +27,34 @@
     <meta name="Address" content="Россия, Тамбоская область, Тамбов, Ленинградская улица, дом 1">
 
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Центр компетенций ТГТУ">
-    <meta property="og:description" content="Добро пожаловать в Центр компетенций Тамбовского Государственного Технического Университета. Мы помогаем оценить развить ваши надпрофессиональные навыки, чтобы в будущем вы могли найти работу вашей мечты.">
+    <meta property="og:title" content="ТГТУ Центр компетенций">
+    <meta property="og:description" content="Добро пожаловать в Центр компетенций Тамбовского Государственного Технического Университета. Мы помогаем оценить и развить ваши надпрофессиональные навыки, чтобы в будущем вы могли найти работу вашей мечты.">
     <meta property="og:url" content="">
     <meta property="og:image" content="/images/bg.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <meta property="og:site_name" content="ТГТУ Центр компетенций">
+    <meta property="og:site_name" content="Центр компетенций ТГТУ">
     <meta property="og:locale" content="ru_RU">
+
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "ResearchProject",
+          "name": "Центр компетенций ТГТУ",
+          "alternateName": "Центр компетенций",
+          "url": "https://ck-tstu.ru",
+          "logo": "https://ck-tstu.ru/logo.png",
+          "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "630731",
+            "contactType": "customer service",
+            "contactOption": "TollFree",
+            "areaServed": "RU",
+            "availableLanguage": "Russian"
+          },
+          "sameAs": "https://instagram.com/ck_tstu?utm_medium=copy_link"
+        }
+    </script>
 
     <link rel="stylesheet" href="css/style.css">
 
@@ -53,6 +73,7 @@
             <nav class="nav hide" id="nav">
                 <a href="#about" class="nav__link">О центре</a>
                 <a href="#slider" class="nav__link">Мы предоставляем</a>
+                <a href="#rating" class="nav__link">Оценить себя</a>
                 <a href="#news" class="nav__link">Мероприятия</a>
                 <a href="#partners" class="nav__link">Партнёры</a>
             </nav>
@@ -123,17 +144,37 @@
         <div class="slider">
             <div class="slider__item">
                 Валидные инструменты оценки 
-                и развития студентов</div>
-            <div class="slider__item">Точка осознанной коммуникации
+                и развития студентов
+            </div>
+            <div class="slider__item">
+                Точка осознанной коммуникации
                 студента с работодателем при поддержке 
                 университета и АНО «Россия – страна 
-                возможностей»</div>
-            <div class="slider__item">Удобная среда подбора кадров для 
-                работодателей</div>
-            <div class="slider__item">Точка развития кадрового потенциала 
+                возможностей»
+            </div>
+            <div class="slider__item">
+                Удобная среда подбора кадров для 
+                работодателей
+            </div>
+            <div class="slider__item">
+                Точка развития кадрового потенциала 
                 университета (программ, 
                 преподавателей, административного 
-                персонала)</div>
+                персонала)
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="rating anim-items" id="rating">
+    <h2 class="title">4 шага оценить себя</h2>
+    <div class="container">
+        <div class="rating__inner">
+                <p class="rating__step">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <p class="rating__step">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <p class="rating__step">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <p class="rating__step">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <p class="rating__step">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
         </div>
     </div>
 </section>
